server/tests/phase1_error.txt
C:\StudentDashboard1\shadcn-ui\node_modules\.pnpm\@prisma+client@7.0.1_prisma@7.0.1_typescript@5.9.3\node_modules\@prisma\client\runtime\client.js:70
${n}`}var nl=require("@prisma/client-runtime-utils");function il(e){return e.length===0?Promise.resolve([]):new Promise((t,r)=>{let n=new Array(e.length),i=null,o=!1,s=0,a=()=>{o||(s++,s===e.length&&(o=!0,i?r(i):t(n)))},l=c=>{o||(o=!0,r(c))};for(let c=0;c<e.length;c++)e[c].then(u=>{n[c]=u,a()},u=>{if(!(0,nl.hasBatchIndex)(u)){l(u);return}u.batchRequestIdx===c?l(u):(i||(i=u),a())})})}var Nt=I("prisma:client");typeof globalThis=="object"&&(globalThis.NODE_CLIENT=!0);var Sd={requestArgsToMiddlewareArgs:e=>e,middlewareArgsToRequestArgs:e=>e},Cd=Symbol.for("prisma.client.transaction.id"),Rd={id:0,nextId(){return++this.id}};function cl(e){class t{_originalClient=this;_runtimeDataModel;_requestHandler;_connectionPromise;_disconnectionPromise;_engineConfig;_accelerateEngineConfig;_clientVersion;_errorFormat;_tracingHelper;_previewFeatures;_activeProvider;_globalOmit;_extensions;_engine;_appliedParent;_createPrismaPromise=ei();constructor(n){e=n.__internal?.configOverride?.(e)??e,n&&rl(n,e);let i=new ll.EventEmitter().on("error",()=>{});this._extensions=Ne.empty(),this._previewFeatures=e.previewFeatures,this._clientVersion=e.clientVersion??za,this._activeProvider=e.activeProvider,this._globalOmit=n?.omit,this._tracingHelper=ja();let o;if(n?.adapter){o=n.adapter;let s=e.activeProvider==="postgresql"||e.activeProvider==="cockroachdb"?"postgres":e.activeProvider;if(o.provider!==s)throw new w.PrismaClientInitializationError(`The Driver Adapter \`${o.adapterName}\`, based on \`${o.provider}\`, is not compatible with the provider \`${s}\` specified in the Prisma schema.`,this._clientVersion)}try{let s=n??{},l=(s.__internal??{}).debug===!0;if(l&&I.enable("prisma:client"),s.errorFormat?this._errorFormat=s.errorFormat:process.env.NODE_ENV==="production"?this._errorFormat="minimal":process.env.NO_COLOR?this._errorFormat="colorless":this._errorFormat="colorless",this._runtimeDataModel=e.runtimeDataModel,this._engineConfig={enableDebugLogs:l,logLevel:s.log&&Qa(s.log),logQueries:s.log&&!!(typeof s.log=="string"?s.log==="query":s.log.find(c=>typeof c=="string"?c==="query":c.level==="query")),compilerWasm:e.compilerWasm,clientVersion:e.clientVersion,previewFeatures:this._previewFeatures,activeProvider:e.activeProvider,inlineSchema:e.inlineSchema,tracingHelper:this._tracingHelper,transactionOptions:{maxWait:s.transactionOptions?.maxWait??2e3,timeout:s.transactionOptions?.timeout??5e3,isolationLevel:s.transactionOptions?.isolationLevel},logEmitter:i,adapter:o,accelerateUrl:s.accelerateUrl},this._accelerateEngineConfig=Object.create(this._engineConfig),this._accelerateEngineConfig.accelerateUtils={resolveDatasourceUrl:()=>{if(s.accelerateUrl)return s.accelerateUrl;throw new w.PrismaClientInitializationError(`\`accelerateUrl\` is required when using \`@prisma/extension-accelerate\`:
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^

TypeError: Cannot read properties of undefined (reading '__internal')
    at new t (C:\StudentDashboard1\shadcn-ui\node_modules\.pnpm\@prisma+client@7.0.1_prisma@7.0.1_typescript@5.9.3\node_modules\@prisma\client\runtime\client.js:70:952)
    at file:///C:/StudentDashboard1/shadcn-ui/server/tests/phase1.test.js:5:16
    at ModuleJob.run (node:internal/modules/esm/module_job:345:25)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:651:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.19.0
